--- a/src/app/sign-in/sign-in.page.html
+++ b/src/app/sign-in/sign-in.page.html
@@ -38,7 +38,7 @@
                 <div class="item_inner">
                     <ion-label>{{'email_address' | translate}}</ion-label>
                     <div class="input_box">
-                        <ion-input type="email" value="" placeholder="{{'enter_email_address' | translate}}" [(ngModel)]="email"></ion-input>
+                        <ion-input type="email" value="" placeholder="{{'enter_your_email_address' | translate}}" [(ngModel)]="email"></ion-input>
                     </div>
                 </div>
             </ion-item>
@@ -54,11 +54,11 @@
         <ion-button size="large" shape="block" fill="solid" mode="md" class="btn animate__animated animate__fadeInUp" (click)="login()">{{'login' | translate}}</ion-button>
 
         <div class="or_continue_with">
-            <h3 class="ion-text-center animate__animated animate__fadeInUp">{{"not_registered_yet" | translate}}</h3>
+            <h3 class="ion-text-center animate__animated animate__fadeInUp">{{"you_are_not_registered_yet" | translate}}</h3>
             <ion-row>
                 <ion-col>
                     <ion-button size="large" mode="md" fill="outline" shape="block" class="btn animate__animated animate__fadeInUp" (click)="goToSignUp()">
-                    {{"sign_up" | translate}}
+                    {{"continue" | translate}}
                     </ion-button>
                 </ion-col>
                 <!-- <ion-col size="6">
