updated sign in page and language doc

--- a/src/app/sign-in/sign-in.page.html
+++ b/src/app/sign-in/sign-in.page.html
@@ -54,7 +54,7 @@
         <ion-button size="large" shape="block" fill="solid" mode="md" class="btn animate__animated animate__fadeInUp" (click)="login()">{{'login' | translate}}</ion-button>
 
         <div class="or_continue_with">
-            <h3 class="ion-text-center animate__animated animate__fadeInUp">{{"you_are_not_registered_yet" | translate}}</h3>
+            <h3 class="ion-text-center animate__animated animate__fadeInUp">{{"you_are_not_registered_yet" | translate}}?</h3>
             <ion-row>
                 <ion-col>
                     <ion-button size="large" mode="md" fill="outline" shape="block" class="btn animate__animated animate__fadeInUp" (click)="goToSignUp()">
