--- a/src/app/sign-up/sign-up.page.html
+++ b/src/app/sign-up/sign-up.page.html
@@ -25,14 +25,14 @@
         </div>
 
         <ion-list lines="none">
-            <ion-item lines="none" class="animate__animated animate__fadeInUp">
+            <!-- <ion-item lines="none" class="animate__animated animate__fadeInUp">
                 <div class="item_inner">
                     <ion-label>{{'phone_number' | translate}}</ion-label>
                     <div class="input_box">
                         <ion-input type="tel" value="987 654 3210" placeholder="{{'enter_phone_number' | translate}}"></ion-input>
                     </div>
                 </div>
-            </ion-item>
+            </ion-item> -->
             <ion-item lines="none" class="animate__animated animate__fadeInUp">
                 <div class="item_inner">
                     <ion-label>{{'full_name' | translate}}</ion-label>
