--- a/src/app/my-profile/my-profile.page.html
+++ b/src/app/my-profile/my-profile.page.html
@@ -519,7 +519,7 @@
                     </div>
                     <h3>{{"change_language" | translate}}</h3>
                 </div>
-                <div class="item_box d-flex" (click)="signIn()">
+                <div class="item_box d-flex" (click)="signOut()">
                     <div class="icon_box" style="background: #e26141;">
                         <ion-icon class="zmdi zmdi-open-in-new ion-text-center"></ion-icon>
                     </div>
