edited activity options

--- a/src/app/activity/activity.page.html
+++ b/src/app/activity/activity.page.html
@@ -790,7 +790,7 @@
                     </div>
                 </ion-col>
 
-                <ion-col size="6" class="animate__animated animate__zoomIn">
+                <!-- <ion-col size="6" class="animate__animated animate__zoomIn">
                     <div class="item" (click)="openMoreOptions()">
                         <div class="text_box">
                             <h3>Stuck in <br> Lift</h3>
@@ -799,9 +799,9 @@
                             <img src="assets/images/more_options/security_lift.png" class="animate__animated animate__fadeInUp">
                         </div>
                     </div>
-                </ion-col>
+                </ion-col> -->
 
-                <ion-col size="6" class="animate__animated animate__zoomIn">
+                <!-- <ion-col size="6" class="animate__animated animate__zoomIn">
                     <div class="item" (click)="openMoreOptions()">
                         <div class="text_box">
                             <h3>Animal <br> Threat</h3>
@@ -810,7 +810,7 @@
                             <img src="assets/images/more_options/security_snake.png" class="animate__animated animate__fadeInUp">
                         </div>
                     </div>
-                </ion-col>
+                </ion-col> -->
 
                 <ion-col size="6" class="animate__animated animate__zoomIn">
                     <div class="item" (click)="openMoreOptions()">
