--- a/src/app/allow-cab/allow-cab.page.html
+++ b/src/app/allow-cab/allow-cab.page.html
@@ -40,10 +40,10 @@
                             <div class="input_box d-flex">
                                 <ion-select mode="md" class="ion-text-end" placeholder="{{'company' | translate}}" cancelText="{{'cancel' | translate}}" okText="{{'ok' | translate}}" [(ngModel)]="cab_company">
                                     <ion-select-option value="1">Uber</ion-select-option>
-                                    <ion-select-option value="2">Lyft</ion-select-option>
-                                    <ion-select-option value="3">Hailo</ion-select-option>
-                                    <ion-select-option value="4">Ola</ion-select-option>
-                                    <ion-select-option value="5">Grab Taxi</ion-select-option>
+                                    <ion-select-option value="2">In Drive</ion-select-option>
+                                    <ion-select-option value="3">Compass Taxi</ion-select-option>
+                                    <ion-select-option value="4">Travelr</ion-select-option>
+                                    <!-- <ion-select-option value="5">Grab Taxi</ion-select-option> -->
                                 </ion-select>
                                 <ion-icon class="zmdi zmdi-caret-down  ion-text-end end"></ion-icon>
                             </div>
