edited the lis of delivery companies

--- a/src/app/allow-deliveryman/allow-deliveryman.page.html
+++ b/src/app/allow-deliveryman/allow-deliveryman.page.html
@@ -22,13 +22,13 @@
                             <ion-label mode="md" style="display:none !important;">{{"select_delivery_company" | translate}}</ion-label>
                             <div class="input_box d-flex">
                                 <ion-select mode="md" placeholder="{{'select_delivery_company' | translate}}" cancelText="{{'cancel' | translate}}" okText="{{'ok' | translate}}">
-                                    <ion-select-option value="1">FedEx</ion-select-option>
-                                    <ion-select-option value="2">UPS</ion-select-option>
-                                    <ion-select-option value="3">XPO</ion-select-option>
-                                    <ion-select-option value="4">USPS</ion-select-option>
-                                    <ion-select-option value="5">Walmart</ion-select-option>
-                                    <ion-select-option value="6">Amazon</ion-select-option>
-                                    <ion-select-option value="7">Postmates</ion-select-option>
+                                    <ion-select-option value="1">7Krave</ion-select-option>
+                                    <ion-select-option value="2">Quickcart</ion-select-option>
+                                    <ion-select-option value="3">TARA</ion-select-option>
+                                    <ion-select-option value="4">Courts</ion-select-option>
+                                    <ion-select-option value="5">Pricesmart</ion-select-option>
+                                    <!-- <ion-select-option value="6">Amazon</ion-select-option>
+                                    <ion-select-option value="7">Postmates</ion-select-option> -->
                                 </ion-select>
                                 <ion-icon class="zmdi zmdi-caret-down  ion-text-end end"></ion-icon>
                             </div>
